metadata-sfdx/force-app/main/default/objects/LiveText__LiveTextGlobalSettings__c/LiveText__LiveTextGlobalSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global Settings.</description>
    <label>LiveMessageGlobalSettings</label>
</CustomObject>