metadata-sfdx/force-app/main/default/objects/LiveText__LiveTextGlobalSettings__c/fields/LiveText__Active_Status_Purge_Hours__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Active_Status_Purge_Hours__c</fullName>
    <description>specify hours to change conversation header's Active status to Ended.</description>
    <label>Active Status Purge Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>