metadata-sfdx/force-app/main/default/objects/LiveText__LiveTextGlobalSettings__c/fields/LiveText__GlobalTriggerExecutionEnabled__c.field-meta.xml
<CustomField>
    <fullName>LiveText__GlobalTriggerExecutionEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>GlobalTriggerExecutionEnabled if checked will enable/ disable all triggers in Organisation.</description>
    <label>GlobalTriggerExecutionEnabled</label>
    <type>Checkbox</type>
</CustomField>