metadata-sfdx/force-app/main/default/objects/LiveText__LiveTextGlobalSettings__c/fields/LiveText__New_Status_Purge_Hours__c.field-meta.xml
<CustomField>
    <fullName>LiveText__New_Status_Purge_Hours__c</fullName>
    <label>New Status Purge Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>